--- a/index.html
+++ b/index.html
@@ -1,35 +1,92 @@
-<div class="app">
- <div class="calculator">
-  <header>
-   <h1>Tip Calculator</h1>
-  </header>
-  <main>
-   <section class="options">
-    <div class="input-group">
-    <div class="pre">£</div>
-    <input type="number" class="cost" placeholder="How much was the bill?" />
+
+
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+ <meta charset="UTF-8">
+ <title>CodePen - Tip Calculator</title>
+ <link rel="stylesheet" href="./style.css">
+ 
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!doctype html>
+<html lang="en">
+ <head>
+   <title>Tip Calculator</title>
+   <!-- Required meta tags -->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ 
+   <!-- Bootstrap CSS -->
+   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
+ 
+ </head>
+ <body class="bg-dark">
+   <div class="container">
+     <div class="row">
+       <div class="col-md-6 mx-auto">
+         <div class="card card-body text-center mt-5">
+           <h1 class="heading display-5 pb-3">Tip Calculator</h1>
+           <form id="tip-form">
+             <div class="form-group">
+               <div class="input-group">
+                 <span class="input-group-addon">$</span>
+                 <input type="number" class="form-control" id="billTotal" placeholder="Enter the Total Bill">
+               </div>
+             </div>
+             <br>
+             <div class="form-group tipPersent">
+               <div class="input-group">
+                 <label for="">Tip:</label>
+ 
+ 
+                 <input type="number" class="form-control" id="tipInput" placeholder="Enter the tip percentage">
+                 <span class="input-group-addon" id="tipOutput"></span>
+               </div>
+             </div>
+ 
+ 
+ 
+           </form>
+           <hr>
+ 
+           <!-- RESULTS -->
+           <div id="results" class="pt-4">
+             <h5>Results</h5>
+             <div class="form-group">
+               <div class="input-group">
+                 <span class="input-group-addon">Tip amount</span>
+                 <input type="number" class="form-control" id="tipAmount" disabled>
+               </div>
+             </div>
+ 
+             <div class="form-group">
+               <div class="input-group">
+                 <span class="input-group-addon">Total Bill with Tip</span>
+                 <input type="number" class="form-control" id="totalBillWithTip" disabled>
+               </div>
+             </div>
+ 
+ 
+           </div>
+         </div>
+       </div>
+     </div>
    </div>
-   <div class="input-group">
-    <select class="service" required>
-     <option disabled selected>How was your service?</option>
-     <option value="30">5 - Amazing</option>
-     <option value="20">4 - Great</option>
-     <option value="10">3 - Good</option>
-     <option value="5">2 - Alright</option>
-     <option value="0">1 - Terrible</option>
-    </select>
-   </div>
-   <div class="input-group">
-    <input type="number" class="people" placeholder="How many are sharing the bill?" />
-   </div>
-   </section>
-   <section class="tip-wrap">
-    <p>You should tip: </p>
-    <h3 class="tip">£0</h3>
-   </section>
-  </main>
-  <footer>
-   <button id="tip-btn">Tip</button>
-  </footer>
- </div>
-</div>
+ 
+   <!-- Optional JavaScript -->
+   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+ 
+ </body>
+</html>
+<!-- partial -->
+ <script  src="./script.js"></script>
+ 
+</body>
+</html>
+
+
