--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
- <meta charset="UTF-8">
- <title>CodePen - Tip Calculator</title>
- <link rel="stylesheet" href="style.css">
- 
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <!doctype html>
 <html lang="en">
  <head>
-   <title>Tip Calculator</title>
+   
    <!-- Required meta tags -->
-   <meta charset="utf-8">
+  
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  
    <!-- Bootstrap CSS -->
-   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="style.css">
  
  </head>
+
  <body class="bg-dark">
    <div class="container">
      <div class="row">
